# mellifluous

./: .env  .gitignore  Makefile  db_setup.py  discogs_lookup.py  models.py  pipeline.py  pyproject.toml  requirements.txt  spotify.py  spotify_lookup.py
app/: main.py
app/static/: scripts.js
app/templates/: index.html
client/: login.elm
db/: schema.sql
db/migrations/: 20250223211527_create_playlist_and_tracks_tables.sql
server/: app.py  discogs_lookup.py  log.py  requirements.txt  spotify_lookup.py
