[project]
name = "mellifluous"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "jinja2>=3.1.5",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.32.0",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff.lint]
# The default set of rules (from https://docs.astral.sh/ruff/configuration/#configuring-ruff) plus import sorting.
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
strict = true
